--- a/Project-14-Project-management-system/package.json
+++ b/Project-14-Project-management-system/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
