--- a/Project-17-React-Form/package.json
+++ b/Project-17-React-Form/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "prop-types": "^15.8.1",
     "vite": "^5.0.0"
   }
 }
